feat: get rid of the queue table
