# openapi/backend.spec.yaml
@@ -6,8 +6,6 @@ info:
     
     ## Events
     
-    ## Queues
-    
     ## Tickets
   contact:
     email: changeme@example.com
@@ -15,7 +13,7 @@ info:
 tags:
   - name: Operations
   - name: Events
-  - name: Queues
+  - name: Tickets
 paths:
   /ping:
     get:
@@ -71,7 +69,7 @@ paths:
             path: page[size]
         - in: query
           name: filter[name_like]
-          description: Substring match the queue name
+          description: Substring match the event name
           schema:
             type: string
           x-oapi-codegen-extra-tags:
@@ -146,17 +144,6 @@ paths:
             format: uuid
           required: true
           description: the ID of the event
-        - in: query
-          name: include
-          description: The list of nested item types to load with this request
-          schema:
-            type: array
-            items:
-              type: string
-              enum:
-                - queue
-          style: form
-          required: false
       responses:
         '200':
           $ref: '#/components/responses/EventWithRelationsResponse'
@@ -183,112 +170,12 @@ paths:
           $ref: '#/components/responses/EventResponse'
         '404':
           $ref: '#/components/responses/NotFoundProblem'
-
-  /queue:
-    get:
-      summary: Get all queues
-      description: ""
-      operationId: get-queues
-      tags:
-        - Queues
-      parameters:
-        - in: query
-          name: page[offset]
-          description: The page offset
-          schema:
-            type: integer
-            minimum: 0
-          x-oapi-codegen-extra-tags:
-            path: page[offset]
-        - in: query
-          name: page[size]
-          description: The page size. A -1 value will load all pages.
-          schema:
-            type: integer
-            minimum: -1
-          x-oapi-codegen-extra-tags:
-            path: page[size]
-        - in: query
-          name: filter[event_id]
-          description: Substring match the queue name
-          schema:
-            type: string
-            format: uuid
-          x-oapi-codegen-extra-tags:
-            path: filter[event_id]
-      responses:
-        '200':
-          $ref: '#/components/responses/PaginatedQueuesResponse'
-    put:
-      summary: Create a new queue for an event
-      description: ""
-      operationId: put-queue
-      tags:
-        - Queues
-      requestBody:
-        $ref: '#/components/requestBodies/NewQueueRequest'
-      responses:
-        '201':
-          $ref: '#/components/responses/QueueResponse'
-  /queue/{id}:
-    get:
-      summary: Get a queue by ID
-      description: ""
-      operationId: get-queue-by-id
-      tags:
-        - Queues
-      parameters:
-        - in: path
-          name: id
-          description: the ID of the queue
-          schema:
-            type: string
-            format: uuid
-          required: true
-        - in: query
-          name: include
-          description: The list of nested item types to load with this request
-          schema:
-            type: array
-            items:
-              type: string
-              enum:
-                - event
-          style: form
-          required: false
-      responses:
-        '200':
-          $ref: '#/components/responses/QueueWithRelationsResponse'
-        '404':
-          $ref: '#/components/responses/NotFoundProblem'
-    patch:
-      summary: Update a queue by ID
-      description: ""
-      operationId: patch-queue-by-id
-      tags:
-        - Queues
-      parameters:
-        - in: path
-          name: id
-          schema:
-            type: string
-            format: uuid
-          required: true
-          description: the ID of the event
-      requestBody:
-        $ref: '#/components/requestBodies/QueueUpdateRequest'
-      responses:
-        '200':
-          $ref: '#/components/responses/QueueResponse'
-        '404':
-          $ref: '#/components/responses/NotFoundProblem'
-  /queue/{id}/activate-tickets:
+  /event/{id}/activate-tickets:
     post:
-      summary: Mark the first N people in the queue as active
+      summary: Mark the first N people in the event as active
       description: ""
-      operationId: post-queue-activate-tickets
+      operationId: post-event-activate-tickets
       tags:
-        - Queues
         - Tickets
       parameters:
         - in: path
@@ -297,7 +184,7 @@ paths:
             type: string
             format: uuid
           required: true
-          description: the ID of the queue
+          description: the ID of the event
         - in: query
           name: include
           description: The list of nested item types to load with this request
@@ -316,18 +203,17 @@ paths:
           $ref: '#/components/responses/ActivateTicketsResponse'
         '404':
           $ref: '#/components/responses/NotFoundProblem'
-  /queue/{id}/latest-activated-tickets:
+  /event/{id}/latest-activated-tickets:
     get:
       summary: Get the most recently activated tickets
       description: ""
-      operationId: get-queue-latest-activated-tickets
+      operationId: get-event-latest-activated-tickets
       tags:
-        - Queues
         - Tickets
       parameters:
         - in: path
           name: id
-          description: the ID of the queue
+          description: the ID of the event
           schema:
             type: string
             format: uuid
@@ -345,13 +231,12 @@ paths:
           $ref: '#/components/responses/TicketsResponse'
         '404':
           $ref: '#/components/responses/NotFoundProblem'
-  /queue/{id}/ticket-stats:
+  /event/{id}/ticket-stats:
     get:
-      summary: Get ticket stats for the queue
+      summary: Get ticket stats for the event
       description: ""
-      operationId: get-queue-ticket-stats
+      operationId: get-event-ticket-stats
       tags:
-        - Queues
         - Tickets
       parameters:
         - in: path
@@ -360,10 +245,10 @@ paths:
             type: string
             format: uuid
           required: true
-          description: the ID of the queue
+          description: the ID of the event
       responses:
         '200':
-          $ref: '#/components/responses/QueueTicketStatisticsResponse'
+          $ref: '#/components/responses/EventTicketStatisticsResponse'
         '404':
           $ref: '#/components/responses/NotFoundProblem'
   /ticket:
@@ -445,7 +330,6 @@ paths:
             items:
               type: string
               enum:
-                - queue
                 - event
           style: form
           required: false
@@ -489,10 +373,14 @@ components:
           schema:
             required:
               - name
+              - description
               - startTime
               - endTime
             properties:
               name:
+                type: string
+                nullable: false
+              description:
                 type: string
                 nullable: false
               startTime:
@@ -517,6 +405,9 @@ components:
               name:
                 type: string
                 nullable: false
+              description:
+                type: string
+                nullable: false
               startTime:
                 type: string
                 format: date-time
@@ -529,48 +420,6 @@ components:
                 type: string
                 format: date-time
                 nullable: false
-    NewQueueRequest:
-      required: true
-      description: A new queue
-      content:
-        application/json:
-          schema:
-            $ref: '#/components/schemas/NewQueue'
-    QueueUpdateRequest:
-      required: true
-      description: A update to a queue
-      content:
-        application/json:
-          schema:
-            properties:
-              name:
-                type: string
-                nullable: false
-                example: "Dealer's Den (Sat AM)"
-              queueOpenTime:
-                type: string
-                format: date-time
-                nullable: false
-                description: The time at which people can start joining the queue
-                example: "2025-05-02T09:00:00Z"
-              queueCloseTime:
-                type: string
-                format: date-time
-                nullable: false
-                description: The time at which people can no longer join the queue
-                example: "2025-05-02T12:00:00Z"
-              requestOpenTime:
-                type: string
-                format: date-time
-                nullable: false
-                description: The time at which people can start requesting tickets
-                example: "2025-05-01T00:00:00Z"
-              requestCloseTime:
-                type: string
-                format: date-time
-                nullable: false
-                description: The time at which people can no longer request tickets
-                example: "2025-05-02T12:00:00Z"
     NewTicketRequest:
       required: true
       description: A new ticket
@@ -578,9 +427,9 @@ components:
         application/json:
           schema:
             required:
-              - queueId
+              - eventId
             properties:
-              queueId:
+              eventId:
                 type: string
                 format: uuid
     TicketUpdateRequest:
@@ -669,54 +518,8 @@ components:
                 $ref: '#/components/schemas/Event'
               related:
                 $ref: '#/components/schemas/EventRelated'
-    QueueResponse:
-      description: A queue
-      content:
-        application/json:
-          schema:
-            required:
-              - data
-            properties:
-              data:
-                $ref: '#/components/schemas/Queue'
-    PaginatedQueuesResponse:
-      description: A page of queues
-      content:
-        application/json:
-          schema:
-            required:
-              - data
-              - total_items
-              - pagination
-            properties:
-              data:
-                type: array
-                nullable: false
-                items:
-                  $ref: '#/components/schemas/Queue'
-              filter:
-                $ref: '#/components/schemas/QueueFilter'
-              total_items:
-                type: integer
-                nullable: false
-                minimum: 0
-                example: 2
-              pagination:
-                $ref: '#/components/schemas/NumberedPagination'
-    QueueWithRelationsResponse:
-      description: A queue with related items
-      content:
-        application/json:
-          schema:
-            required:
-              - data
-            properties:
-              data:
-                $ref: '#/components/schemas/Queue'
-              related:
-                $ref: '#/components/schemas/QueueRelated'
-    QueueTicketStatisticsResponse:
-      description: Ticket statistics for a queue
+    EventTicketStatisticsResponse:
+      description: Ticket statistics for an event
       content:
         application/json:
           schema:
@@ -871,6 +674,7 @@ components:
       required:
         - id
         - name
+        - description
         - startTime
         - endTime
       properties:
@@ -883,6 +687,10 @@ components:
           type: string
           nullable: false
           example: "Dealer's Den"
+        description:
+          type: string
+          nullable: false
+          example: "A fun place to go buy lots of furry nicknacks"
         visibleFrom:
           type: string
           format: date-time
@@ -927,8 +735,8 @@ components:
           - "-end_time"
     EventRelated:
       properties:
-        queue:
-          $ref: '#/components/schemas/QueueArray'
+        ticket:
+          $ref: '#/components/schemas/TicketArray'
     NumberedPagination:
       description: A structure to specify pagination response
       required:
@@ -1032,172 +840,11 @@ components:
         - "event:view"
         - "event:update"
         - "event:delete"
-        - "queue:create"
-        - "queue:view"
-        - "queue:update"
-        - "queue:delete"
-        - "queue:request-ticket"
+        - "event:request-ticket"
         - "ticket:view"
         - "ticket:consume"
         - "ticket:activate"
         - "ticket:revoke"
-    BaseQueue:
-      required:
-        - type
-        - id
-        - event_id
-        - name
-        - queueOpenTime
-        - queueCloseTime
-        - requestOpenTime
-        - requestCloseTime
-      properties:
-        type:
-          $ref: '#/components/schemas/QueueType'
-        id:
-          type: string
-          format: uuid
-          nullable: false
-          example: "cf29406a-a51f-4efe-8a33-f7d97d45e5f5"
-        event_id:
-          type: string
-          format: uuid
-          nullable: false
-          example: "cf29406a-a51f-4efe-8a33-f7d97d45e5f5"
-        name:
-          type: string
-          nullable: false
-          example: "Dealer's Den (Sat AM)"
-        visibleFrom:
-          type: string
-          format: date-time
-          nullable: false
-          description: The time where the a queue will be visible
-        queueOpenTime:
-          type: string
-          format: date-time
-          nullable: false
-          description: The time at which people can start joining the queue
-          example: "2025-05-02T09:00:00Z"
-        queueCloseTime:
-          type: string
-          format: date-time
-          nullable: false
-          description: The time at which people can no longer join the queue
-          example: "2025-05-02T12:00:00Z"
-        requestOpenTime:
-          type: string
-          format: date-time
-          nullable: false
-          description: The time at which people can start requesting tickets
-          example: "2025-05-01T00:00:00Z"
-        requestCloseTime:
-          type: string
-          format: date-time
-          nullable: false
-          description: The time at which people can no longer request tickets
-          example: "2025-05-02T12:00:00Z"
-    FirstComeFirstServeWithGapsQueue:
-      allOf:
-        - $ref: '#/components/schemas/BaseQueue'
-        - required:
-            - interval
-          properties:
-            interval:
-              type: integer
-              minimum: 1
-    QueueType:
-      type: string
-      enum:
-        - FirstComeFirstServeWithGapsQueue
-    Queue:
-      oneOf:
-        - $ref: '#/components/schemas/FirstComeFirstServeWithGapsQueue'
-      discriminator:
-        propertyName: type
-        mapping:
-          FirstComeFirstServeWithGapsQueue: '#/components/schemas/FirstComeFirstServeWithGapsQueue'
-    NewQueue:
-      oneOf:
-        - $ref: '#/components/schemas/NewFirstComeFirstServeWithGapsQueue'
-      discriminator:
-        propertyName: "type"
-        mapping:
-          FirstComeFirstServeWithGaps: '#/components/schemas/NewFirstComeFirstServeWithGapsQueue'
-    QueueFilter:
-      description: Filters for listing queues
-      properties:
-        event_id:
-          type: string
-          format: uuid
-          nullable: false
-    QueueRelated:
-      properties:
-        event:
-          $ref: '#/components/schemas/Event'
-    BaseNewQueue:
-      required:
-        - type
-        - eventId
-        - name
-        - queueOpenTime
-        - queueCloseTime
-        - requestOpenTime
-        - requestCloseTime
-      properties:
-        type:
-          type: string
-          enum:
-            - FirstComeFirstServeWithGaps
-        eventId:
-          type: string
-          format: uuid
-          nullable: false
-        name:
-          type: string
-          nullable: false
-          example: "Dealer's Den (Sat AM)"
-        visibleFrom:
-          type: string
-          format: date-time
-          nullable: false
-          description: The time where the a queue will be visible
-        queueOpenTime:
-          type: string
-          format: date-time
-          nullable: false
-          description: The time at which people can start joining the queue
-          example: "2025-05-02T09:00:00Z"
-        queueCloseTime:
-          type: string
-          format: date-time
-          nullable: false
-          description: The time at which people can no longer join the queue
-          example: "2025-05-02T12:00:00Z"
-        requestOpenTime:
-          type: string
-          format: date-time
-          nullable: false
-          description: The time at which people can start requesting tickets
-          example: "2025-05-01T00:00:00Z"
-        requestCloseTime:
-          type: string
-          format: date-time
-          nullable: false
-          description: The time at which people can no longer request tickets
-          example: "2025-05-02T12:00:00Z"
-    NewFirstComeFirstServeWithGapsQueue:
-      allOf:
-        - $ref: '#/components/schemas/BaseNewQueue'
-        - properties:
-            interval:
-              type: integer
-              minimum: 1
-              default: 2
-    QueueArray:
-      type: array
-      items:
-        $ref: '#/components/schemas/Queue'
     Ticket:
       required:
         - id
@@ -1222,12 +869,14 @@ components:
         - OnHold
         - Consumed
         - Revoked
+    TicketArray:
+      type: array
+      items:
+        $ref: '#/components/schemas/Ticket'
     TicketRelated:
       properties:
         child:
           $ref: '#/components/schemas/Ticket'
-        queue:
-          $ref: '#/components/schemas/Queue'
         event:
           $ref: '#/components/schemas/Event'
     TicketStatistics:
